corpus/baselines/compiler/duplicateIdentifierRelatedSpans7.errors.txt
[96mfile1.ts[0m:[93m3[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate1'.

[7m3[0m         duplicate1: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m5[0m:[93m9[0m - 'duplicate1' was also declared here.
    [7m5[0m         duplicate1(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m4[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate2'.

[7m4[0m         duplicate2: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m6[0m:[93m9[0m - 'duplicate2' was also declared here.
    [7m6[0m         duplicate2(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m5[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate3'.

[7m5[0m         duplicate3: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m7[0m:[93m9[0m - 'duplicate3' was also declared here.
    [7m7[0m         duplicate3(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m6[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate4'.

[7m6[0m         duplicate4: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m8[0m:[93m9[0m - 'duplicate4' was also declared here.
    [7m8[0m         duplicate4(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m7[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate5'.

[7m7[0m         duplicate5: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m9[0m:[93m9[0m - 'duplicate5' was also declared here.
    [7m9[0m         duplicate5(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m8[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate6'.

[7m8[0m         duplicate6: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m10[0m:[93m9[0m - 'duplicate6' was also declared here.
    [7m10[0m         duplicate6(): number;
    [7m  [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m9[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate7'.

[7m9[0m         duplicate7: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m11[0m:[93m9[0m - 'duplicate7' was also declared here.
    [7m11[0m         duplicate7(): number;
    [7m  [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m10[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate8'.

[7m10[0m         duplicate8: () => string;
[7m  [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m12[0m:[93m9[0m - 'duplicate8' was also declared here.
    [7m12[0m         duplicate8(): number;
    [7m  [0m [96m        ~~~~~~~~~~[0m

[96mfile1.ts[0m:[93m11[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate9'.

[7m11[0m         duplicate9: () => string;
[7m  [0m [91m        ~~~~~~~~~~[0m

  [96mfile2.ts[0m:[93m13[0m:[93m9[0m - 'duplicate9' was also declared here.
    [7m13[0m         duplicate9(): number;
    [7m  [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m5[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate1'.

[7m5[0m         duplicate1(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m3[0m:[93m9[0m - 'duplicate1' was also declared here.
    [7m3[0m         duplicate1: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m6[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate2'.

[7m6[0m         duplicate2(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m4[0m:[93m9[0m - 'duplicate2' was also declared here.
    [7m4[0m         duplicate2: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m7[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate3'.

[7m7[0m         duplicate3(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m5[0m:[93m9[0m - 'duplicate3' was also declared here.
    [7m5[0m         duplicate3: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m8[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate4'.

[7m8[0m         duplicate4(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m6[0m:[93m9[0m - 'duplicate4' was also declared here.
    [7m6[0m         duplicate4: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m9[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate5'.

[7m9[0m         duplicate5(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m7[0m:[93m9[0m - 'duplicate5' was also declared here.
    [7m7[0m         duplicate5: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m10[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate6'.

[7m10[0m         duplicate6(): number;
[7m  [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m8[0m:[93m9[0m - 'duplicate6' was also declared here.
    [7m8[0m         duplicate6: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m11[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate7'.

[7m11[0m         duplicate7(): number;
[7m  [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m9[0m:[93m9[0m - 'duplicate7' was also declared here.
    [7m9[0m         duplicate7: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m12[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate8'.

[7m12[0m         duplicate8(): number;
[7m  [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m10[0m:[93m9[0m - 'duplicate8' was also declared here.
    [7m10[0m         duplicate8: () => string;
    [7m  [0m [96m        ~~~~~~~~~~[0m

[96mfile2.ts[0m:[93m13[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate9'.

[7m13[0m         duplicate9(): number;
[7m  [0m [91m        ~~~~~~~~~~[0m

  [96mfile1.ts[0m:[93m11[0m:[93m9[0m - 'duplicate9' was also declared here.
    [7m11[0m         duplicate9: () => string;
    [7m  [0m [96m        ~~~~~~~~~~[0m


==== file2.ts (9 errors) ====
    /// <reference path="./file1" />
    
    declare module "someMod" {
        export interface TopLevel {
            duplicate1(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate1'.
!!! related TS6203 file1.ts:3:9: 'duplicate1' was also declared here.
            duplicate2(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate2'.
!!! related TS6203 file1.ts:4:9: 'duplicate2' was also declared here.
            duplicate3(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate3'.
!!! related TS6203 file1.ts:5:9: 'duplicate3' was also declared here.
            duplicate4(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate4'.
!!! related TS6203 file1.ts:6:9: 'duplicate4' was also declared here.
            duplicate5(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate5'.
!!! related TS6203 file1.ts:7:9: 'duplicate5' was also declared here.
            duplicate6(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate6'.
!!! related TS6203 file1.ts:8:9: 'duplicate6' was also declared here.
            duplicate7(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate7'.
!!! related TS6203 file1.ts:9:9: 'duplicate7' was also declared here.
            duplicate8(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate8'.
!!! related TS6203 file1.ts:10:9: 'duplicate8' was also declared here.
            duplicate9(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate9'.
!!! related TS6203 file1.ts:11:9: 'duplicate9' was also declared here.
        }
    }
    export {};
    
==== file1.ts (9 errors) ====
    declare module "someMod" {
        export interface TopLevel {
            duplicate1: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate1'.
!!! related TS6203 file2.ts:5:9: 'duplicate1' was also declared here.
            duplicate2: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate2'.
!!! related TS6203 file2.ts:6:9: 'duplicate2' was also declared here.
            duplicate3: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate3'.
!!! related TS6203 file2.ts:7:9: 'duplicate3' was also declared here.
            duplicate4: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate4'.
!!! related TS6203 file2.ts:8:9: 'duplicate4' was also declared here.
            duplicate5: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate5'.
!!! related TS6203 file2.ts:9:9: 'duplicate5' was also declared here.
            duplicate6: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate6'.
!!! related TS6203 file2.ts:10:9: 'duplicate6' was also declared here.
            duplicate7: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate7'.
!!! related TS6203 file2.ts:11:9: 'duplicate7' was also declared here.
            duplicate8: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate8'.
!!! related TS6203 file2.ts:12:9: 'duplicate8' was also declared here.
            duplicate9: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate9'.
!!! related TS6203 file2.ts:13:9: 'duplicate9' was also declared here.
        }
    }
Found 18 errors in 2 files.

Errors  Files
     9  file1.ts[90m:3[0m
     9  file2.ts[90m:5[0m

